--- a/ckan/templates-bs3/package/snippets/resource_edit_form.html
+++ b/ckan/templates-bs3/package/snippets/resource_edit_form.html
@@ -9,4 +9,4 @@
 
 {% block again_button %}{% endblock %}
 
-{% block save_button_text %}{{ _('Update Resource') }}{% endblock %}
+{% block save_button_text %}{{ _('Update') }}{% endblock %}
